feat: QPPA-11346 update to java 21 and begin bugfix