@@ -45,33 +45,37 @@ class PiSectionRoundTripTest {
 	@Test
 	void parseSparsePiSectionAsNode() throws XmlException {
 		//set-up
-		String xmlFragment = "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n"
-							 + "<component xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns=\"urn:hl7-org:v3\">\n"
-							 + "	<section>\n" + "		<!-- Measure Section -->\n"
-							 + "		<templateId root=\"2.16.840.1.113883.10.20.24.2.2\"/>\n"
-							 + "		<!-- Advancing Care Information Section templateId -->\n"
-							 + "		<templateId root=\"2.16.840.1.113883.10.20.27.2.5\" extension=\"2017-06-01\"/>\n"
-							 + "		<code code=\"55186-1\" codeSystem=\"2.16.840.1.113883.6.1\" displayName=\"Measure Section\"/>\n"
-							 + "		<title>Measure Section</title>\n" + "		<text>\n" + "		</text>\n"
-							 + "		<entry>\n"
-							 + "			<qed resultName=\"measure\" resultValue=\"measure1\">\n"
-							 + "				<templateId root=\"Q.E.D\"/>\n"
-							 + "			</qed>"
-							 + "		</entry>\n"
-							 + "		<entry typeCode=\"DRIV\">"
-							 + "			<act classCode=\"ACT\" moodCode=\"EVN\">"
-							 + "				<templateId root=\"2.16.840.1.113883.10.20.17.3.8\"/>"
-							 + "				<id root=\"00b669fd-fa4d-4f5c-b109-65c6bbbf73ae\"/>"
-							 + "				<code code=\"252116004\" codeSystem=\"2.16.840.1.113883.6.96\""
-							 + "					displayName=\"Observation Parameters\"/>"
-							 + "				<effectiveTime>"
-							 + "					<low value=\"20170101\"/>"
-							 + "					<high value=\"20170430\"/>"
-							 + "				</effectiveTime>"
-							 + "			</act>"
-							 + "		</entry>"
-							 + "	</section>\n"
-							 + "</component>";
+		String xmlFragment = """
+							 <?xml version="1.0" encoding="utf-8"?>
+							 <component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="urn:hl7-org:v3">
+							 	<section>
+							 		<!-- Measure Section -->
+							 		<templateId root="2.16.840.1.113883.10.20.24.2.2"/>
+							 		<!-- Advancing Care Information Section templateId -->
+							 		<templateId root="2.16.840.1.113883.10.20.27.2.5" extension="2017-06-01"/>
+							 		<code code="55186-1" codeSystem="2.16.840.1.113883.6.1" displayName="Measure Section"/>
+							 		<title>Measure Section</title>
+							 		<text>
+							 		</text>
+							 		<entry>
+							 			<qed resultName="measure" resultValue="measure1">
+							 				<templateId root="Q.E.D"/>
+							 			</qed>\
+							 		</entry>
+							 		<entry typeCode="DRIV">\
+							 			<act classCode="ACT" moodCode="EVN">\
+							 				<templateId root="2.16.840.1.113883.10.20.17.3.8"/>\
+							 				<id root="00b669fd-fa4d-4f5c-b109-65c6bbbf73ae"/>\
+							 				<code code="252116004" codeSystem="2.16.840.1.113883.6.96"\
+							 					displayName="Observation Parameters"/>\
+							 				<effectiveTime>\
+							 					<low value="20170101"/>\
+							 					<high value="20170430"/>\
+							 				</effectiveTime>\
+							 			</act>\
+							 		</entry>\
+							 	</section>
+							 </component>""";
 
 		//execute
 		Node parentNode = new QrdaDecoderEngine(new Context()).decode(XmlUtils.stringToDom(xmlFragment));
@@ -84,35 +88,39 @@ class PiSectionRoundTripTest {
 	@Test
 	void parseGarbagePiSectionAsNode() throws XmlException {
 		//set-up
-		String xmlFragment = "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n"
-							+ "<component xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns=\"urn:hl7-org:v3\">\n"
-							 + "	<section>\n" + "		<!-- Measure Section -->\n"
-							 + "		<templateId root=\"2.16.840.1.113883.10.20.24.2.2\"/>\n"
-							 + "		<!-- Advancing Care Information Section templateId -->\n"
-							 + "		<templateId root=\"2.16.840.1.113883.10.20.27.2.5\" extension=\"2017-06-01\"/>\n"
-							 + "		<code code=\"55186-1\" codeSystem=\"2.16.840.1.113883.6.1\" displayName=\"Measure Section\"/>\n"
-							 + "        <statusCode code=\"Death and Destruction!\" />\n"
-							 + "        Utter garbage!  Buahahahahaha!\n"
-							 + "		<title>Measure Section</title>\n" + "		<text>\n" + "		</text>\n"
-							 + "		<entry>\n"
-							 + "			<qed resultName=\"measure\" resultValue=\"measure1\">\n"
-							 + "				<templateId root=\"Q.E.D\"/>\n"
-							 + "			</qed>"
-							 + "		</entry>\n"
-							 + "		<entry typeCode=\"DRIV\">"
-							 + "			<act classCode=\"ACT\" moodCode=\"EVN\">"
-							 + "				<templateId root=\"2.16.840.1.113883.10.20.17.3.8\"/>"
-							 + "				<id root=\"00b669fd-fa4d-4f5c-b109-65c6bbbf73ae\"/>"
-							 + "				<code code=\"252116004\" codeSystem=\"2.16.840.1.113883.6.96\""
-						 	 + "					displayName=\"Observation Parameters\"/>"
-							 + "				<effectiveTime>"
-							 + "					<low value=\"20170101\"/>"
-							 + "					<high value=\"20170430\"/>"
-							 + "				</effectiveTime>"
-							 + "			</act>"
-							 + "		</entry>"
-							 + "	</section>\n"
-							 + "</component>";
+		String xmlFragment = """
+							 <?xml version="1.0" encoding="utf-8"?>
+							 <component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="urn:hl7-org:v3">
+							 	<section>
+							 		<!-- Measure Section -->
+							 		<templateId root="2.16.840.1.113883.10.20.24.2.2"/>
+							 		<!-- Advancing Care Information Section templateId -->
+							 		<templateId root="2.16.840.1.113883.10.20.27.2.5" extension="2017-06-01"/>
+							 		<code code="55186-1" codeSystem="2.16.840.1.113883.6.1" displayName="Measure Section"/>
+							         <statusCode code="Death and Destruction!" />
+							         Utter garbage!  Buahahahahaha!
+							 		<title>Measure Section</title>
+							 		<text>
+							 		</text>
+							 		<entry>
+							 			<qed resultName="measure" resultValue="measure1">
+							 				<templateId root="Q.E.D"/>
+							 			</qed>\
+							 		</entry>
+							 		<entry typeCode="DRIV">\
+							 			<act classCode="ACT" moodCode="EVN">\
+							 				<templateId root="2.16.840.1.113883.10.20.17.3.8"/>\
+							 				<id root="00b669fd-fa4d-4f5c-b109-65c6bbbf73ae"/>\
+							 				<code code="252116004" codeSystem="2.16.840.1.113883.6.96"\
+							 					displayName="Observation Parameters"/>\
+							 				<effectiveTime>\
+							 					<low value="20170101"/>\
+							 					<high value="20170430"/>\
+							 				</effectiveTime>\
+							 			</act>\
+							 		</entry>\
+							 	</section>
+							 </component>""";
 
 		//execute
 		Node parentNode = new QrdaDecoderEngine(new Context()).decode(XmlUtils.stringToDom(xmlFragment));
@@ -124,32 +132,37 @@ class PiSectionRoundTripTest {
 
 	@Test
 	void parsePiSectionAsJson() throws EncodeException, XmlException {
-		String xmlFragment = "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n"
-				+ "<component xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns=\"urn:hl7-org:v3\">\n"
-				+ "	<section>\n" + "		<!-- Measure Section -->\n"
-				+ "		<templateId root=\"2.16.840.1.113883.10.20.24.2.2\"/>\n"
-				+ "		<!-- Advancing Care Information Section templateId -->\n"
-				+ "		<templateId root=\"2.16.840.1.113883.10.20.27.2.5\" extension=\"2017-06-01\"/>\n"
-				+ "		<code code=\"55186-1\" codeSystem=\"2.16.840.1.113883.6.1\" displayName=\"Measure Section\"/>\n"
-				+ "		<title>Measure Section</title>\n" + "		<text>\n" + "		</text>\n" + "		<entry>\n"
-				+ "			<qed resultName=\"measure\" resultValue=\"measure1\">\n"
-				+ "				<templateId root=\"Q.E.D\"/>\n"
-				+ "			</qed>"
-				+ "		</entry>\n"
-				+ "		<entry typeCode=\"DRIV\">"
-				+ "			<act classCode=\"ACT\" moodCode=\"EVN\">"
-				+ "				<templateId root=\"2.16.840.1.113883.10.20.17.3.8\"/>"
-				+ "				<id root=\"00b669fd-fa4d-4f5c-b109-65c6bbbf73ae\"/>"
-				+ "				<code code=\"252116004\" codeSystem=\"2.16.840.1.113883.6.96\""
-				+ "					displayName=\"Observation Parameters\"/>"
-				+ "				<effectiveTime>"
-				+ "					<low value=\"20170101\"/>"
-				+ "					<high value=\"20170430\"/>"
-				+ "				</effectiveTime>"
-				+ "			</act>"
-				+ "		</entry>"
-				+ "	</section>\n"
-				+ "</component>";
+		String xmlFragment = """
+				<?xml version="1.0" encoding="utf-8"?>
+				<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="urn:hl7-org:v3">
+					<section>
+						<!-- Measure Section -->
+						<templateId root="2.16.840.1.113883.10.20.24.2.2"/>
+						<!-- Advancing Care Information Section templateId -->
+						<templateId root="2.16.840.1.113883.10.20.27.2.5" extension="2017-06-01"/>
+						<code code="55186-1" codeSystem="2.16.840.1.113883.6.1" displayName="Measure Section"/>
+						<title>Measure Section</title>
+						<text>
+						</text>
+						<entry>
+							<qed resultName="measure" resultValue="measure1">
+								<templateId root="Q.E.D"/>
+							</qed>\
+						</entry>
+						<entry typeCode="DRIV">\
+							<act classCode="ACT" moodCode="EVN">\
+								<templateId root="2.16.840.1.113883.10.20.17.3.8"/>\
+								<id root="00b669fd-fa4d-4f5c-b109-65c6bbbf73ae"/>\
+								<code code="252116004" codeSystem="2.16.840.1.113883.6.96"\
+									displayName="Observation Parameters"/>\
+								<effectiveTime>\
+									<low value="20170101"/>\
+									<high value="20170430"/>\
+								</effectiveTime>\
+							</act>\
+						</entry>\
+					</section>
+				</component>""";
 
 		String expected = "{\n  \"category\" : \"pi\",\n  \"submissionMethod\" : \"electronicHealthRecord\",\n  \"measurements\" : [ {\n    \"measure\" : \"measure1\"\n  } ],\n  \"performanceStart\" : \"2017-01-01\",\n  \"performanceEnd\" : \"2017-04-30\"\n}";
 
@@ -180,7 +193,7 @@ class PiSectionRoundTripTest {
 			converter.transform();
 		} catch (TransformException exception) {
 			AllErrors errors = exception.getDetails();
-			details.addAll(errors.getErrors().get(0).getDetails());
+			details.addAll(errors.getErrors().getFirst().getDetails());
 		}
 		assertThat(details).comparingElementsUsing(DetailsErrorEquals.INSTANCE)
 			.contains(ProblemCode.PI_RESTRICTED_MEASURES);
@@ -206,7 +219,7 @@ class PiSectionRoundTripTest {
 		assertThat(warnings).isNull();
 		List<String> cehrtIdList = JsonHelper.readJsonAtJsonPath(qppWrapper.toString(),
 			"$.measurementSets[?(@.category=='pi')].cehrtId", new TypeRef<List<String>>() { });
-		assertThat(cehrtIdList.get(0)).isEqualTo("XX15CXXXXXXXXXX");
+		assertThat(cehrtIdList.getFirst()).isEqualTo("XX15CXXXXXXXXXX");
 	}
 
 	@Test
@@ -229,7 +242,7 @@ class PiSectionRoundTripTest {
 		assertThat(warnings).isNull();
 		List<String> cehrtIdList = JsonHelper.readJsonAtJsonPath(qppWrapper.toString(),
 			"$.measurementSets[?(@.category=='pi')].cehrtId", new TypeRef<List<String>>() { });
-		assertThat(cehrtIdList.get(0)).isEqualTo("XX15CXXXXXXXXXX");
+		assertThat(cehrtIdList.getFirst()).isEqualTo("XX15CXXXXXXXXXX");
 	}
 
 	@Test
@@ -252,12 +265,12 @@ class PiSectionRoundTripTest {
 		assertThat(warnings).isNull();
 		List<String> cehrtIdList = JsonHelper.readJsonAtJsonPath(qppWrapper.toString(),
 			"$.measurementSets[?(@.category=='pi')].cehrtId", new TypeRef<List<String>>() { });
-		assertThat(cehrtIdList.get(0)).isEqualTo("XX15CXXXXXXXXXX");
+		assertThat(cehrtIdList.getFirst()).isEqualTo("XX15CXXXXXXXXXX");
 	}
 
 	private void assertAciSectionHasSingleQedNode(Node aciSectionNode) {
 		assertThat(aciSectionNode).isNotNull();
-		assertThat(aciSectionNode.getChildNodes().get(0).getType())
+		assertThat(aciSectionNode.getChildNodes().getFirst().getType())
 				.isEquivalentAccordingToCompareTo(TemplateId.QED);
 	}
 }
